[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemy/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Objects/HeartDispenser/Screen.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Enemy/Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://Enemy/death.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.8391, 33.7057 )

[sub_resource type="CircleShape2D" id=2]
radius = 51.9849

[sub_resource type="CircleShape2D" id=3]
radius = 144.115

[node name="Enemy" type="RigidBody2D" groups=[
"Hittable",
]]
collision_layer = 8
collision_mask = 7
mode = 3
gravity_scale = 4.0
script = ExtResource( 3 )
Bullet = ExtResource( 4 )
shootRange = 1000

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.968627, 0, 0.862745, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Gun" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Gun"]
modulate = Color( 0.317647, 0, 0.556863, 1 )
position = Vector2( 8, 0 )
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="Muzzle" type="Position2D" parent="Gun"]
position = Vector2( 24, 0 )

[node name="NoShootArea" type="Area2D" parent="."]
show_behind_parent = true
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoShootArea"]
show_behind_parent = true
shape = SubResource( 2 )

[node name="Firerate" type="Timer" parent="."]
wait_time = 2.0

[node name="NoGoTime" type="Timer" parent="."]
one_shot = true

[node name="Grav" type="Area2D" parent="."]
space_override = 1
gravity_point = true
gravity = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grav"]
shape = SubResource( 3 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="NoShootArea" to="." method="_on_NoShootArea_body_entered"]
[connection signal="timeout" from="Firerate" to="." method="_on_Firerate_timeout"]
[connection signal="timeout" from="NoGoTime" to="." method="_on_NoGoTime_timeout"]
